Test Cases/V2/Test Case/Tests/TT-238 - VTO/Test Cases/Negative/TT_238_4_ClickAddButtonCoreValues.tc
<?xml version="1.0" encoding="UTF-8"?>
<TestCaseEntity>
   <description></description>
   <name>TT_238_4_ClickAddButtonCoreValues</name>
   <tag></tag>
   <comment></comment>
   <testCaseGuid>57aafb7e-7c30-463b-b60c-111ef3f22578</testCaseGuid>
</TestCaseEntity>
